# bazel-examples

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  gazelle_python.yaml  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.bazelrc  ci.yaml
ibazel/: README.md
ibazel/vite/: BUILD.bazel  README.md  index.html  package.json
ibazel/vite/src/mycomponent/: BUILD.bazel  index.js  package.json
ibazel/vite/src/mylib/: BUILD.bazel  index.js  package.json
ibazel/vite/vite/: BUILD.bazel
tests/build_tests_only/: BUILD.bazel  README.md  hello_lib.cc  hello_lib.h  hello_lib_test.cc  hello_world.cc
