bazel_dep(name = "gazelle", version = "0.34.0", repo_name = "bazel_gazelle")

# Python toolchain

bazel_dep(name = "rules_python", version = "0.27.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.11",
    is_default = True,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")

bazel_dep(name = "rules_python_gazelle_plugin", version = "0.27.0")
